<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_pan_tilt</name>
  <version>0.0.0</version>
  <description>The dynamixel_pan_tilt package</description>
  <maintainer email="anthony@todo.todo">anthony</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
