<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_pan_tilt_msgs</name>
  <version>1.0.0</version>
  <description>dynamixel_pan_tilt_msgs provides messages for dynamixel_pan_tilt_driver</description>
  <maintainer email="anthony.jiang.github@outlook.com">Zhengyi Jiang</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
